--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "python.linting.enabled": true,
     "cSpell.ignoreWords": [
         "dotenv",
-        "getenv"
+        "getenv",
+        "imshow"
     ]
 }
