--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "cSpell.ignoreWords": [
+        "adafruit",
         "dotenv",
         "getenv",
         "imshow"
