Adds CV recipe (#2)
* documents code

* add cv readme

* update main readme

* update readme

* update readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "cSpell.ignoreWords": [
+        "adafruit",
         "dotenv",
-        "getenv"
+        "getenv",
+        "imshow"
     ]
 }
