--- a/02_c2d_messages/messenger/.gitignore
+++ b/02_c2d_messages/messenger/.gitignore
@@ -127,6 +127,11 @@ bin
 obj
 appsettings.json
 local.settings.json
+
+# Azurite artifacts
+__blobstorage__
+__queuestorage__
+__azurite_db*__.json
 .python_packages
 host.json
 proxies.json
