--- a/02_c2d_messages/messenger/requirements.txt
+++ b/02_c2d_messages/messenger/requirements.txt
@@ -2,5 +2,5 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
-azure-functions
-azure-iot-hub
+azure-functions==1.8.0
+azure-iot-hub==2.6.0
