--- a/03_cv/requirements.txt
+++ b/03_cv/requirements.txt
@@ -1,3 +1,26 @@
+# ATTENTION
+# All dependencies are captured here because matplotlib and numpy
+# MUST upgrade together.
 azure-cognitiveservices-vision-computervision==0.9.0
-python-dotenv
-matplotlib
+azure-common==1.1.27
+certifi==2021.10.8
+charset-normalizer==2.0.10
+cycler==0.11.0
+fonttools==4.28.5
+idna==3.3
+isodate==0.6.1
+kiwisolver==1.3.2
+matplotlib==3.5.1
+msrest==0.6.21
+numpy==1.21.5
+oauthlib==3.1.1
+packaging==21.3
+picamera==1.13
+Pillow==9.0.0
+pyparsing==3.0.6
+python-dateutil==2.8.2
+python-dotenv==0.19.2
+requests==2.27.1
+requests-oauthlib==1.3.0
+six==1.16.0
+urllib3==1.26.8
