fix vs code debug and run configurations

--- a/02_c2d_messages/.vscode/launch.json
+++ b/02_c2d_messages/.vscode/launch.json
@@ -5,8 +5,8 @@
             "name": "Attach to Python Functions",
             "type": "python",
             "request": "attach",
-            "port": 9091,
-            "preLaunchTask": "func: host start"
+            "port": 7071,
+            "preLaunchTask": "start"
         }
     ]
 }
