--- a/02_c2d_messages/.vscode/settings.json
+++ b/02_c2d_messages/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "azureFunctions.deploySubpath": "messenger",
     "azureFunctions.scmDoBuildDuringDeployment": true,
-    "azureFunctions.pythonVenv": ".venv",
+    "azureFunctions.pythonVenv": "${workspaceFolder}/.venv",
     "azureFunctions.projectLanguage": "Python",
     "azureFunctions.projectRuntime": "~3",
     "debug.internalConsoleOptions": "neverOpen"
