--- a/02_c2d_messages/.vscode/tasks.json
+++ b/02_c2d_messages/.vscode/tasks.json
@@ -2,11 +2,11 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "start",
 			"type": "func",
-			"command": "host start",
+			"command": "host start --verbose",
 			"problemMatcher": "$func-python-watch",
 			"isBackground": true,
-			"dependsOn": "pipInstall",
 			"options": {
 				"cwd": "${workspaceFolder}/messenger"
 			}
